--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
                 </li>
             </ul>
         </nav>
+
+        <!-- ╔════════════════════════════════════════╗ -->
+        <!--           🌟 MAIN SECTION 🌟              -->
+        <!-- ╚════════════════════════════════════════╝ -->
+
+        <main class="main-container">
+            <div class="div1 box"> 1 </div>
+            <div class="div2 box"> 2 </div>
+            <div class="div3 box"> 3 </div>
+            <div class="div4 box"> 4 </div>
+            <div class="div5 box"> 5 </div>
+        </main>
+
         
     </body>
 
